src/examples/errors/10_invalid_operation.veri
// Error: Invalid operation on types
// Expected error: E001 - Type mismatch (int expected, bool found)

fn main() {
    let x: int = true + 5;
}
